[gd_scene load_steps=6 format=3 uid="uid://cu82s1rr2eqbq"]

[ext_resource type="Texture2D" uid="uid://b4wijuwglcpg0" path="res://resources/sprites/GUI/shared/border3.png" id="1_08lsh"]
[ext_resource type="Texture2D" uid="uid://b0nsc2v1cdqqd" path="res://resources/sprites/GUI/shared/panel_background_simple.png" id="1_21fji"]
[ext_resource type="Script" uid="uid://bd8tbxki0n5hx" path="res://scenes/GUI/main_game/shop/gui_shop_main.gd" id="1_157dq"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="3_4afxj"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="4_ul7c2"]

[node name="GUIShopMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_157dq")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("4_ul7c2")]
layout_mode = 1

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(220, 120)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -154.0
offset_right = 110.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.396078, 0.45098, 0.572549, 1)
layout_mode = 2
texture = ExtResource("1_21fji")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Border" type="NinePatchRect" parent="MainPanel"]
self_modulate = Color(0.0745098, 0.0745098, 0.0745098, 1)
layout_mode = 2
texture = ExtResource("1_08lsh")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HUD"
text = "Shop"
horizontal_alignment = 1

[node name="ToolSeedContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ToolContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/ToolSeedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SeedContainer" type="GridContainer" parent="MainPanel/MarginContainer/VBoxContainer/ToolSeedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.5
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 4
columns = 2

[node name="GUIRichTextButton" parent="." instance=ExtResource("3_4afxj")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -22.0
offset_right = 15.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
localization_text_key = "BUTTON_NEW_WEEK"
